# minicars

./: .gitignore  CMakeLists.txt  README.md  SceneNodes.xml  cars.project  cmd.bat  makefile  ogre.cfg  plugins.cfg  records.txt  resources.cfg  rutasIA.xml  sounds.xml
DOCUMENTATION/: DIAGRAMAS_ENTREGA_FINAL.uml  README.txt  diagrama_pantallas.graphml
GIMP/: numeros.xcf  pause.xcf  portada_cdxcf.xcf  win2.xcf
IA/: iamanager.cpp  iamanager.h  iapoint.h
blender/textures/: madera.xcf
include/: Bluez_Util.h  CarRayCast.h  Carrusel.h  ControlsState.h  CreditsState.h  Crosshair.h  GameManager.h  GameState.h  IAPointsDeserializer.h  IAPointsSerializer.h  InputManager_.h  IntroState.h  LooseState.h  MenuState.h  OgreUtil.h  OptionsState.h  PauseState.h  PlayState.h  PlayWidget.h  RecordsState.h  SceneNodeConfig.h  Wiimote.h  WinState.h  actualOptions.h  bulletUtil.h  car.h  carSelectorState.h  constants.h  cpuPlayer.h  humanPlayer.h  iamanager.h  iapoint.h  pathDrawerState.h  puntoIA.h  puntoManager.h  records.h  soundUtil.h  sounds.h  testStateVehicRayCast.h  track.h
media/atrezzo/: Plata.material  basecolors.001.material  carmaterial_blue.material  carmaterial_citrus.material  carmaterial_red.material  carmaterial_silver.material  lights.001.material  lights.003.material  lights.orange.001.material  lights.orange.003.material  metal.001.material  metal.003.material  siren_blue.material  tires.003.material  windows.003.material
media/atrezzo.bak/: Luz.material  MaterialRuedaAtrezzo.material  MaterialRuedaAtrezzo1.material  MaterialRuedaAtrezzo2.material  base_trees.material  basecolors.material  black.gloss.001.material  carmaterial_orange.001.material  carmaterial_red.001.material  lights.red.001.material  lights.red.003.material  red.gloss.material  tires.001.material  tires.material  windows.001.material
media/cars/farara-sport/: car-farara-sport.mesh  car-farara-sport.mesh.xml  lights.material  wheel-farara-sport.mesh  wheel-farara-sport.mesh.xml
media/cars/formula/: car-formula.mesh  car-formula.mesh.xml  carmaterial_green.material  metal.black.material  wheel-formula.mesh  wheel-formula.mesh.xml
media/cars/groupc1/: car-groupc-1.mesh  car-groupc-1.mesh.xml  wheel-groupc-1.mesh  wheel-groupc-1.mesh.xml
media/cars/groupc2/: car-groupc-2.mesh  car-groupc-2.mesh.xml  metal.material  wheel-groupc-2.mesh  wheel-groupc-2.mesh.xml  white.material
media/cars/karts/: car-kart-chasis.mesh  car-kart-chasis.mesh.xml  carmaterial_orange.material  wheel-kart.mesh  wheel-kart.mesh.xml
media/cars/lamba-sport/: car-lamba-sport.mesh  car-lamba-sport.mesh.xml  wheel-lamba-sport.mesh  wheel-lamba-sport.mesh.xml
media/cars/parsche-sport/: car-parsche-sport.mesh  car-parsche-sport.mesh.xml  wheel-parsche-sport.mesh  wheel-parsche-sport.mesh.xml
media/floor/: PlanoSelector.mesh  PlanoSelector.mesh.xml  floor.material
media/materials/: black.gloss.material  carmaterial_violet.material
media/misc/: marca.mesh  marca.mesh.xml  marcaMaterial.material
media/overlay/info/: Ground.material  info.overlay  panel.material  panel.tga  panel.xcf
media/skybox/: skybox.material
media/tracks/: Asfalto.material  CheckPointPlane.mesh  CheckPointPlane.mesh.xml  MaterialRosita.material  PlaneRoad.mesh  PlaneRoad.mesh.xml  PlaneRoadBig.mesh  PlaneRoadBig.mesh.xml  Track1.mesh  Track1.mesh.xml  Track1Big.mesh.xml  Track1Col.mesh  Track1Col.mesh.xml  Track1NoRoadBig.mesh  Track1NoRoadBig.mesh.xml  Track1bis.mesh  Track1bis.mesh.xml  Track1bisNoRoad.mesh  Track1bisNoRoad.mesh.xml  colision-mesh.material  racecolors.material  track1matBI.material
mygui/Media/Cars/: controls.layout  countdown.layout  credits.layout  intro.layout  loose.layout  main.layout  options.layout  (+4 more)
src/: Bluez_Util.cpp  CarRayCast.cpp  Carrusel.cpp  ControlsState.cpp  CreditsState.cpp  Crosshair.cpp  GameManager.cpp  IAPointsDeserializer.cpp  IAPointsSerializer.cpp  InputManager.cpp  IntroState.cpp  LooseState.cpp  MenuState.cpp  OptionsState.cpp  PauseState.cpp  PlayState.cpp  PlayWidget.cpp  RecordsState.cpp  SceneNodeConfig.cpp  Wiimote.cpp  WinState.cpp  actualOptions.cpp  car.cpp  carSelectorState.cpp  cpuPlayer.cpp  humanPlayer.cpp  iamanager.cpp  main.cpp  ogreUtil.cpp  pathDrawerState.cpp  puntoManager.cpp  records.cpp  sounds.cpp  testStateVehicRaycast.cpp  track.cpp
tests/IA/: 3d.cpp  ia_tester  main.cpp  makefile
tests/SceneNodeConfig/: SceneNodes.xml  main.cpp  makefile
tests/sounds/: main.cpp  makefile  sounds.xml  sounds_tester
tests/tester/: main.c  timer
visualstudio/minicars/: minicars.sln  minicars.vcxproj  minicars.vcxproj.filters
(+46 files in other folders)
